--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,13 +1,60 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    margin: 0.3rem;
+    max-width: 200px;
+}
+
+.product-List-Page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.productItem {
+    box-shadow: 0 0 0.4rem 0.4rem #00000025;
+    margin: 1rem;
+    padding: 1rem;
+    height: auto;
+    width: min-content;
+}
+
+.addToCartButton {
+    width: 100%;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    background-color: #F7CA00;
+}
+
+.addToCartButton .textButtonAdd {
+    font-size: 15px;
+    text-transform: uppercase;
+    margin: 1rem;
+}
+
+p {
+    text-align: justify;
+    margin: 0.2rem;
+}
+
+span {
+    font-weight: 700;
 }
