--- a/front/src/index.css
+++ b/front/src/index.css
@@ -41,13 +41,31 @@ img {
     border: none;
     border-radius: 1rem;
     padding: 0.5rem;
-    background-color: #F7CA00;
+    background-color: #f7ad00;
 }
 
-.addToCartButton .textButtonAdd {
+.moreInformation {
+    width: 100%;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    background-color: #F7CA00;
+    text-decoration: none;
+}
+
+.addToCartButton .textButtonAdd,
+.moreInformation .textButtonAdd {
     font-size: 15px;
     text-transform: uppercase;
     margin: 1rem;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 p {
